[package]
name = "halo2wrong"
version = "0.1.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
halo2 = { git = "https://github.com/privacy-scaling-explorations/halo2", rev= "a764a7f"}



[dev-dependencies]
rand = "0.8"
rand_core = { version = "0.6", default-features = false }

[features]
default = []
circuit-params = ["halo2/circuit-params"]
